<resources>
    <string name="Continue">Continue</string>
    <string name="Password">Password</string>
    <string name="Save">Save</string>
    <string name="Saved">Saved</string>
    <string name="Unlockaccess">Unlock access to contests</string>
    <string name="_import">Import</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_me">About Me</string>
    <string name="access_description">you now have access to the same tools \10 and features that the top Memers in the world \10 are using ��</string>
    <string name="account_recovery_success_msg">You successfully reset the password</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="add_favorite_hashtags">Add your favorite Hashtags for future reuse</string>
    <string name="add_your_caption">Add your caption</string>
    <string name="additional_watermark_tag_line">Add your own custom watermark</string>
    <string name="addprofilephoto">Add Profile Photo</string>
    <string name="adjust">Adjust</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Memes</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_spring_behavior">com.google.android.material.appbar.AppBarLayoutSpringBehavior</string>
    <string name="apply">Apply</string>
    <string name="are_you_enjoying">Are you enjoying \10 the app?</string>
    <string name="auth_prompt_page_title">Meme Making Made \10Easy</string>
    <string name="auth_prompt_policy_snippet">Privacy Policy</string>
    <string name="auth_prompt_terms_disclaimer">By signing up, you accept the Terms of Service \10and Privacy Policy</string>
    <string name="auth_prompt_terms_snippet">Terms of Service</string>
    <string name="auto_save_when_sharing">Auto save when sharing</string>
    <string name="back">Back</string>
    <string name="background">Background</string>
    <string name="badge">badge_image</string>
    <string name="bio">Bio</string>
    <string name="birthday_hint">Birthday</string>
    <string name="blockMessage">They won\'t be able to find your profile\10or posts on Memes. Memes won\'t let\10 them know you blocked them.</string>
    <string name="block_user">Block</string>
    <string name="border_size">Border Size</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brightness">Brightness</string>
    <string name="brush_color">Brush Color</string>
    <string name="brush_thickness">Brush Thickness</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_anytime">Cancel anytime</string>
    <string name="cancel_dialog_message">Cancel</string>
    <string name="change">Change</string>
    <string name="change_font">Change Font</string>
    <string name="change_password">Change Password</string>
    <string name="change_poster">Change Poster</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat">Message</string>
    <string name="chat_add">Add</string>
    <string name="chat_add_channel_members">Add People</string>
    <string name="chat_admin">Admin</string>
    <string name="chat_ban_user">Ban User</string>
    <string name="chat_ban_user_msg">Are you sure you want to ban this user from this channel? This user will not be able to send messages in this channel.</string>
    <string name="chat_ban_user_negative_action">Cancel</string>
    <string name="chat_ban_user_positive_action">Ban</string>
    <string name="chat_ban_user_title">Ban User</string>
    <string name="chat_channel_add_members_title">Add Members</string>
    <string name="chat_channel_deleted_action">OK</string>
    <string name="chat_channel_deleted_msg">This chat was deleted.</string>
    <string name="chat_channel_deleted_title">:(</string>
    <string name="chat_channel_description_hint">Enter channel description (Optional)</string>
    <string name="chat_channel_details">Details</string>
    <string name="chat_channel_info">Channel Information</string>
    <string name="chat_channel_members">Members</string>
    <string name="chat_channel_name_hint">Enter channel name</string>
    <string name="chat_channel_settings">Settings</string>
    <string name="chat_channel_toggle_mute">Mute Conversation</string>
    <string name="chat_channels_title">Chats</string>
    <string name="chat_create">Create</string>
    <string name="chat_create_channel">Create Channel</string>
    <string name="chat_create_channel_action">Chat</string>
    <string name="chat_create_channel_title">New Message</string>
    <string name="chat_create_group">Create Group</string>
    <string name="chat_create_user">Create User</string>
    <string name="chat_delete_channel">Delete</string>
    <string name="chat_delete_channel_msg">Are you sure you want to delete this chat? The chat will be unrecoverable, and none of the members will be able to access it.</string>
    <string name="chat_delete_channel_negative_action">Cancel</string>
    <string name="chat_delete_channel_positive_action">Delete</string>
    <string name="chat_delete_channel_title">Delete</string>
    <string name="chat_details">Details</string>
    <string name="chat_direct_message">New Chat</string>
    <string name="chat_done">Done</string>
    <string name="chat_edit">Edit</string>
    <string name="copyLink">Copy Link</string>
    <string name="crop">Crop</string>
    <string name="delete">Delete</string>
    <string name="deletePost">Delete</string>
    <string name="download_post">Download Post</string>
    <string name="enhance">Enhance</string>
    <string name="entry_drafts_load_failed">Failed to load Drafts</string>
    <string name="entry_drafts_loading">Loading Drafts..</string>
    <string name="entry_drafts_not_found">No Drafts found.</string>
    <string name="entry_drafts_title">Drafts</string>
    <string name="entry_frame_sizes_load_failed">Failed to load Frame Sizes</string>
    <string name="entry_frame_sizes_loading">Loading Frame Sizes..</string>
    <string name="entry_frame_sizes_title">Create a new design</string>
    <string name="entry_page_title">Create Design</string>
    <string name="entry_trending_templates_load_failed">Failed to load Trending Templates</string>
    <string name="entry_trending_templates_loading">Loading Trending Templates..</string>
    <string name="entry_trending_templates_title">Trending Templates</string>
    <string name="entry_wireframes_load_failed">Failed to load Wireframes</string>
    <string name="entry_wireframes_loading">Loading Wireframes..</string>
    <string name="entry_wireframes_title">Choose Layout</string>
    <string name="flip_horizontal">H Flip</string>
    <string name="flip_vertical">V Flip</string>
    <string name="gph_copy_link">Copy Link</string>
    <string name="gph_more_by">More by @%1$s</string>
    <string name="gph_view_on_giphy">View on GIPHY</string>
    <string name="media_selection_action_next">Next</string>
    <string name="media_selection_category_giphy">GIFs - Powered by Giphy</string>
    <string name="media_selection_category_memes">Memes</string>
    <string name="media_selection_category_patterns">Patterns</string>
    <string name="media_selection_category_photos">Your Photos</string>
    <string name="media_selection_category_reddit">Reddit</string>
    <string name="media_selection_category_videos">Your Videos</string>
    <string name="media_selection_load_gifs">Loading Gifs..</string>
    <string name="media_selection_load_gifs_failed">Failed to load Gifs</string>
    <string name="media_selection_load_memes">Loading Memes..</string>
    <string name="media_selection_load_memes_failed">Failed to load Memes</string>
    <string name="media_selection_load_patterns">Loading Patterns..</string>
    <string name="media_selection_load_patterns_failed">Failed to load Patterns</string>
    <string name="media_selection_load_photos">Loading Photos..</string>
    <string name="media_selection_load_photos_failed">Failed to load Photos</string>
    <string name="media_selection_load_reddit">Loading Reddit Posts..</string>
    <string name="media_selection_load_reddit_failed">Failed to load Reddit Posts</string>
    <string name="media_selection_load_videos">Loading Videos..</string>
    <string name="media_selection_load_videos_failed">Failed to load Videos</string>
    <string name="media_selection_page_title">Select Media</string>
    <string name="media_selection_pick">See All &gt;</string>
    <string name="media_selection_see_all">See All &gt;</string>
    <string name="media_selection_selected_items">Selected Items</string>
    <string name="n_delete_draft">Delete Draft</string>
    <string name="n_delete_draft_confirmation_message">Do you really want to delete this draft? Deleted drafts can\'t be recovered.</string>
    <string name="n_hint_saved_watermarks_location">Saved Watermarks can be viewed in \10Watermark &gt; Saved Watermarks</string>
    <string name="n_save_watermark">Save Watermark</string>
    <string name="n_save_watermark_information_message">You can save this layer as a Watermark. Saved watermarks can be imported in any frame designs later on.</string>
    <string name="nudge">Nudge</string>
    <string name="opacity">Opacity</string>
    <string name="reportPost">Report</string>
    <string name="report_inappropriate">It\'s inappropriate</string>
    <string name="report_spam">It\'s spam</string>
    <string name="repost">Repost</string>
    <string name="rotate">Rotate</string>
    <string name="save">Save</string>
    <string name="scale">Scale</string>
    <string name="shareProfile">Share This Profile</string>
    <string name="turn_on_post_notifications">Turn On Post Notifications</string>
    <string name="unfollow">Unfollow</string>
</resources>