<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="?android:attr/colorBackground" android:layout_width="match_parent" android:layout_height="match_parent" android:animateLayoutChanges="true">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="?attr/colorSurface" android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="@dimen/_16sdp">
        <ImageView android:layout_gravity="top|left|center_vertical|center_horizontal|center|start" android:id="@+id/back_image_view" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/_10sdp" android:layout_width="@dimen/_36sdp" android:layout_height="@dimen/_36sdp" android:src="@drawable/icon_arrow_back" app:tint="?attr/colorTextPrimaryOnSurface"/>
        <TextView android:textSize="@dimen/_14ssp" android:textColor="?attr/colorTextPrimaryOnSurface" android:gravity="center_vertical" android:id="@+id/title_text_view" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/media_selection_page_title" android:layout_weight="1" android:fontFamily="@font/sf_ui_display_bold" android:letterSpacing="0.15" app:fontFamily="@font/sf_ui_display_bold"/>
    </LinearLayout>
    <ScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/_8sdp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/colors_gradients_category_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_contentHeight="@dimen/_72sdp"/>
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/patterns_category_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_contentHeight="@dimen/_72sdp" app:mcv_defaultErrorMessage="@string/media_selection_load_patterns_failed" app:mcv_defaultProgressMessage="@string/media_selection_load_patterns" app:mcv_showActionButton="false" app:mcv_title="@string/media_selection_category_patterns"/>
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/photos_category_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_actionButtonText="@string/media_selection_pick" app:mcv_contentHeight="@dimen/_120sdp" app:mcv_defaultErrorMessage="@string/media_selection_load_photos_failed" app:mcv_defaultProgressMessage="@string/media_selection_load_photos" app:mcv_title="@string/media_selection_category_photos"/>
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/videos_category_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_actionButtonText="@string/media_selection_pick" app:mcv_contentHeight="@dimen/_120sdp" app:mcv_defaultErrorMessage="@string/media_selection_load_videos_failed" app:mcv_defaultProgressMessage="@string/media_selection_load_videos" app:mcv_title="@string/media_selection_category_videos"/>
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/memes_category_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_actionButtonText="@string/media_selection_see_all" app:mcv_contentHeight="@dimen/_120sdp" app:mcv_defaultErrorMessage="@string/media_selection_load_memes_failed" app:mcv_defaultProgressMessage="@string/media_selection_load_memes" app:mcv_title="@string/media_selection_category_memes"/>
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/giphy_category_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_actionButtonText="@string/media_selection_see_all" app:mcv_contentHeight="@dimen/_120sdp" app:mcv_defaultErrorMessage="@string/media_selection_load_gifs_failed" app:mcv_defaultProgressMessage="@string/media_selection_load_gifs" app:mcv_title="@string/media_selection_category_giphy"/>
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/reddit_category_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_actionButtonText="@string/media_selection_see_all" app:mcv_contentHeight="@dimen/_120sdp" app:mcv_defaultErrorMessage="@string/media_selection_load_reddit_failed" app:mcv_defaultProgressMessage="@string/media_selection_load_reddit" app:mcv_title="@string/media_selection_category_reddit"/>
        </LinearLayout>
    </ScrollView>
    <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/selected_media_category_view" android:background="?attr/colorSurface" android:paddingBottom="@dimen/_8sdp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_actionButtonText="@string/media_selection_action_next" app:mcv_actionButtonTextAppearance="@style/MediaSelectionCategory.ActionButtonTextAppearance.Highlight" app:mcv_contentHeight="@dimen/_80sdp" app:mcv_title="@string/media_selection_selected_items"/>
</LinearLayout>
