<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="?attr/colorPrimary" android:layout_width="match_parent" android:layout_height="match_parent" android:animateLayoutChanges="true">
    <FrameLayout android:id="@+id/topbar" android:layout_width="match_parent" android:layout_height="@dimen/_36sdp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <ImageView android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/back_image_view" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/_10sdp" android:layout_width="@dimen/_36sdp" android:layout_height="@dimen/_36sdp" android:src="@drawable/icon_arrow_back" app:tint="?attr/colorTextPrimaryOnSurface"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="?attr/colorTextPrimaryOnSurface" android:layout_gravity="center" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/entry_page_title" android:textAllCaps="true" android:fontFamily="@font/sf_ui_display_medium" android:letterSpacing="0.15" app:fontFamily="@font/sf_ui_display_medium"/>
    </FrameLayout>
    <ScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/_8sdp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/frame_sizes_category_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_contentHeight="@dimen/_180sdp" app:mcv_defaultErrorMessage="@string/entry_frame_sizes_load_failed" app:mcv_defaultProgressMessage="@string/entry_frame_sizes_loading" app:mcv_showActionButton="false" app:mcv_title="@string/entry_frame_sizes_title"/>
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/templates_category_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_contentHeight="@dimen/_120sdp" app:mcv_defaultErrorMessage="@string/entry_trending_templates_load_failed" app:mcv_defaultProgressMessage="@string/entry_trending_templates_loading" app:mcv_showActionButton="false" app:mcv_title="@string/entry_trending_templates_title"/>
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/wireframes_category_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_contentHeight="@dimen/_120sdp" app:mcv_defaultErrorMessage="@string/entry_wireframes_load_failed" app:mcv_defaultProgressMessage="@string/entry_wireframes_loading" app:mcv_showActionButton="false" app:mcv_title="@string/entry_wireframes_title"/>
            <editor.custom.mediacategoryview.MediaCategoryView android:id="@+id/drafts_category_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:mcv_contentHeight="@dimen/_120sdp" app:mcv_defaultContentNotAvailableMessage="@string/entry_drafts_not_found" app:mcv_defaultErrorMessage="@string/entry_drafts_load_failed" app:mcv_defaultProgressMessage="@string/entry_drafts_loading" app:mcv_showActionButton="false" app:mcv_title="@string/entry_drafts_title"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
