<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/transparent" android:layout_width="match_parent" android:layout_height="match_parent" android:elevation="@dimen/_8sdp" app:cardCornerRadius="@dimen/_4sdp" app:cardUseCompatPadding="true">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:animateLayoutChanges="true" android:layout_marginStart="@dimen/_10sdp" android:layout_marginEnd="@dimen/_10sdp">
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/dodger_blue" android:gravity="center" android:id="@+id/copy_link_text_view" android:background="@color/white" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/copyLink"/>
        <View android:background="@color/light_gray" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="@dimen/divider_height"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/dodger_blue" android:gravity="center" android:id="@+id/share_profile_text_view" android:background="@color/white" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/shareProfile"/>
        <View android:background="@color/light_gray" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/divider_height"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/red" android:gravity="center" android:id="@+id/delete_text_view" android:background="@color/white" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/deletePost"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/red" android:gravity="center" android:id="@+id/report_text_view" android:background="@color/white" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/reportPost"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/red" android:gravity="center" android:id="@+id/unfollow_text_view" android:background="@color/white" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/unfollow"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/dodger_blue" android:gravity="center" android:id="@+id/repost_text_view" android:background="@color/white" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/repost"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/dodger_blue" android:gravity="center" android:id="@+id/toggle_notifications_text_view" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/turn_on_post_notifications"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/dodger_blue" android:gravity="center" android:id="@+id/download_post_text_view" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/download_post"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/dodger_blue" android:gravity="center" android:id="@+id/report_spam_text_view" android:background="@color/white" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/report_spam"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/dodger_blue" android:gravity="center" android:id="@+id/report_inappropriate_text_view" android:background="@color/white" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/report_inappropriate"/>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/dodger_blue" android:gravity="center" android:id="@+id/cancel_text_view" android:background="@color/white" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/cancel"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
