<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:paddingLeft="@dimen/_8sdp" android:paddingRight="@dimen/_8sdp" android:scrollbars="none" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="@dimen/_64sdp" android:paddingHorizontal="@dimen/_8sdp">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="match_parent">
        <editor.custom.optionbutton.SmallOptionButton android:id="@+id/enhance_option_view" android:layout_width="@dimen/_64sdp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_2sdp" android:layout_marginRight="@dimen/_2sdp" android:layout_marginHorizontal="@dimen/_2sdp" app:sob_icon="@drawable/icon_enhance" app:sob_title="@string/enhance"/>
        <editor.custom.optionbutton.SmallOptionButton android:id="@+id/nudge_option_view" android:layout_width="@dimen/_64sdp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_2sdp" android:layout_marginRight="@dimen/_2sdp" android:layout_marginHorizontal="@dimen/_2sdp" app:sob_icon="@drawable/icon_nudge" app:sob_title="@string/nudge"/>
        <editor.custom.optionbutton.SmallOptionButton android:id="@+id/rotate_option_view" android:layout_width="@dimen/_64sdp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_2sdp" android:layout_marginRight="@dimen/_2sdp" android:layout_marginHorizontal="@dimen/_2sdp" app:sob_icon="@drawable/icon_rotate" app:sob_title="@string/rotate"/>
        <editor.custom.optionbutton.SmallOptionButton android:id="@+id/scale_option_view" android:layout_width="@dimen/_64sdp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_2sdp" android:layout_marginRight="@dimen/_2sdp" android:layout_marginHorizontal="@dimen/_2sdp" app:sob_icon="@drawable/icon_scale" app:sob_title="@string/scale"/>
        <editor.custom.optionbutton.SmallOptionButton android:id="@+id/crop_option_view" android:layout_width="@dimen/_64sdp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_2sdp" android:layout_marginRight="@dimen/_2sdp" android:layout_marginHorizontal="@dimen/_2sdp" app:sob_icon="@drawable/icon_crop" app:sob_title="@string/crop"/>
        <editor.custom.optionbutton.SmallOptionButton android:id="@+id/flip_horizontal_option_view" android:visibility="gone" android:layout_width="@dimen/_64sdp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_2sdp" android:layout_marginRight="@dimen/_2sdp" android:layout_marginHorizontal="@dimen/_2sdp" app:sob_icon="@drawable/icon_flip_horizontal" app:sob_selectable="true" app:sob_title="@string/flip_horizontal"/>
        <editor.custom.optionbutton.SmallOptionButton android:id="@+id/flip_vertical_option_view" android:visibility="gone" android:layout_width="@dimen/_64sdp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_2sdp" android:layout_marginRight="@dimen/_2sdp" android:layout_marginHorizontal="@dimen/_2sdp" app:sob_icon="@drawable/icon_flip_vertical" app:sob_selectable="true" app:sob_title="@string/flip_vertical"/>
        <editor.custom.optionbutton.SmallOptionButton android:id="@+id/opacity_option_view" android:layout_width="@dimen/_64sdp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_2sdp" android:layout_marginRight="@dimen/_2sdp" android:layout_marginHorizontal="@dimen/_2sdp" app:sob_icon="@drawable/icon_opacity" app:sob_title="@string/opacity"/>
        <editor.custom.optionbutton.SmallOptionButton android:id="@+id/corner_option_view" android:visibility="gone" android:layout_width="@dimen/_64sdp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_2sdp" android:layout_marginRight="@dimen/_2sdp" android:layout_marginHorizontal="@dimen/_2sdp"/>
    </LinearLayout>
</HorizontalScrollView>
