<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/actionsView" android:background="@drawable/gph_action_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="10dp" android:layout_marginEnd="10dp">
    <TextView android:id="@+id/gphActionMore" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gph_more_by" android:singleLine="true" style="@style/GphActionStyle"/>
    <TextView android:id="@+id/gphCopyLink" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gph_copy_link" android:singleLine="true" style="@style/GphActionStyle"/>
    <TextView android:id="@+id/gphActionViewGiphy" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gph_view_on_giphy" android:singleLine="true" style="@style/GphActionStyle"/>
</LinearLayout>
